Add supertest dependency to send HTTP req

--- a/Group Exploration/Henry's Exploration/Web/server/package.json
+++ b/Group Exploration/Henry's Exploration/Web/server/package.json
@@ -18,5 +18,8 @@
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
+    "supertest": "^6.3.3"
   }
 }
